--- a/views/user/pages/checkout.ejs
+++ b/views/user/pages/checkout.ejs
@@ -173,8 +173,8 @@
 
   function addNewAddress() {
     // Redirect to the addAddress page or perform other actions as needed
-    window.location.href = "/addAddress";
-  }
+    window.location.href = "/addAddress?redirect=checkout";
+  }
 
   const rmCoupon = document.getElementById("rmCoupon");
   rmCoupon.addEventListener("click", handleRemoveCouponBtnClick);
