--- a/views/user/partials/footer.ejs
+++ b/views/user/partials/footer.ejs
@@ -7,30 +7,26 @@
           Categories
         </h4>
 
-        <ul>
-          <li class="p-b-10">
-            <a href="#" class="stext-107 cl7 hov-cl1 trans-04">
-              Women
-            </a>
+        <ul >
+          <li class="p-b-10 stext-107 cl7 hov-cl1 trans-04">
+          
+            half face helmet
+           
           </li>
 
-          <li class="p-b-10">
-            <a href="#" class="stext-107 cl7 hov-cl1 trans-04">
-              Men
-            </a>
+          <li class="p-b-10 stext-107 cl7 hov-cl1 trans-04">
+            
+            full face helmet
+           
           </li>
 
-          <li class="p-b-10">
-            <a href="#" class="stext-107 cl7 hov-cl1 trans-04">
-              Shoes
-            </a>
+          <li class="p-b-10 stext-107 cl7 hov-cl1 trans-04">
+           
+            motocross helmets
+           
           </li>
 
-          <li class="p-b-10">
-            <a href="#" class="stext-107 cl7 hov-cl1 trans-04">
-              Watches
-            </a>
-          </li>
+         
         </ul>
       </div>
 
@@ -41,25 +37,25 @@
 
         <ul>
           <li class="p-b-10">
-            <a href="#" class="stext-107 cl7 hov-cl1 trans-04">
+            <a href="/orderList" class="stext-107 cl7 hov-cl1 trans-04">
               Track Order
             </a>
           </li>
 
           <li class="p-b-10">
-            <a href="#" class="stext-107 cl7 hov-cl1 trans-04">
+            <a href="/orderList" class="stext-107 cl7 hov-cl1 trans-04">
               Returns 
             </a>
           </li>
 
           <li class="p-b-10">
-            <a href="#" class="stext-107 cl7 hov-cl1 trans-04">
+            <a href="/orderList" class="stext-107 cl7 hov-cl1 trans-04">
               Shipping
             </a>
           </li>
 
           <li class="p-b-10">
-            <a href="#" class="stext-107 cl7 hov-cl1 trans-04">
+            <a href="/about" class="stext-107 cl7 hov-cl1 trans-04">
               FAQs
             </a>
           </li>
@@ -90,24 +86,7 @@
         </div>
       </div>
 
-      <div class="col-sm-6 col-lg-3 p-b-50">
-        <h4 class="stext-301 cl0 p-b-30">
-          Newsletter
-        </h4>
-
-        <form>
-          <div class="wrap-input1 w-full p-b-4">
-            <input class="input1 bg-none plh1 stext-107 cl7" type="text" name="email" placeholder="helmocart@gmail.com">
-            <div class="focus-input1 trans-04"></div>
-          </div>
-
-          <div class="p-t-18">
-            <button class="flex-c-m stext-101 cl0 size-103 bg1 bor1 hov-btn2 p-lr-15 trans-04">
-              Subscribe
-            </button>
-          </div>
-        </form>
-      </div>
+   
     </div>
 
     <div class="p-t-40">
@@ -134,9 +113,9 @@
       </div>
 
       <p class="stext-107 cl6 txt-center">
-        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> &amp; distributed by <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+     
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="www.helmocart.cloud" target="_blank"></a> &amp; distributed by <a href="/" target="_blank">Helmocart</a>
+
 
       </p>
     </div>
@@ -223,7 +202,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			});
 		});
 
-		/*---------------------------------------------*/
+		/---------------------------------------------/
 
 		$('.js-addcart-detail').each(function(){
 			var nameProduct = $(this).parent().parent().parent().parent().find('.js-name-detail').html();
